# WiseNote

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: button_border_radius.xml  custom_dialog_radius.xml  note_border_radius.xml  record_text_radius.xml  text_border_radius.xml
app/src/main/res/drawable-v24/: ic_record.xml
app/src/main/res/font/: font.xml  fontstyle.xml
app/src/main/res/layout/: activity_hambuger_menu.xml  activity_home.xml  activity_home_note_item.xml  activity_main.xml  activity_memo.xml  activity_mypage.xml  activity_note_list.xml  activity_note_list_item.xml  activity_notes.xml  activity_record.xml  activity_signin.xml  activity_signup.xml  activity_speech.xml  activity_start.xml  fragment_favorite.xml  fragment_main.xml  fragment_map.xml  fragment_memo.xml  fragment_recent.xml  fragment_text.xml  hamburger.xml  hamburger_add_dialog.xml  hamburger_delete_dialog.xml  hamburger_list_item.xml  memo_edit_dialog.xml  page_bottom.xml  page_top.xml  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
server/: .python-version  Makefile  pyproject.toml  requirements.txt
server/app/: main.py
server/app/api/: __init__.py  auth.py  note.py  notebook.py  user.py
server/app/models/: __init__.py  note.py  user.py
server/app/schemas/: __init__.py  note.py  notebook.py  user.py
server/app/services/: __init__.py  auth.py  base.py  note.py  notebook.py  user.py
server/database/: __init__.py  base.py  session.py
(+56 files in other folders)
