[tool.poetry]
name = "wisenote-server"
version = "0.1.0"
description = ""
authors = ["Dong-Young Kim <31337.persona@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = { extras = ["standard"], version = "^0.15.0" }
pydantic = { extras = ["email"], version = "^1.8.2" }
SQLAlchemy = { extras = ["mypy"], version = "^1.4.25" }
python-multipart = "^0.0.5"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = { extras = ["requirements_deprecated_finder"], version = "^5.9.3" }
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
bandit = "^1.7.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
py_version = "38"
profile = "black"

[tool.mypy]
python_version = "3.8"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
show_error_codes = true
show_error_context = true
show_column_numbers = true
pretty = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
